Working config for multitemporal S2

--- a/compose.yml
+++ b/compose.yml
@@ -8,12 +8,11 @@ services:
        - /workspace/Denys/biomassters/BioMassters-extracted/:/data/
        - /workspace/Denys/biomassters/gfm-biomassters-terratorch/gfm-biomassters-output/:/output/
        - /workspace/Denys/biomassters/gfm-biomassters-terratorch/gfm-biomassters/:/opt/app-root/src/terratorch/
-
     shm_size: '2gb'
     deploy:
       resources:
         reservations:
           devices:
             - driver: nvidia
-              count: 1
+              device_ids: ["2"]
               capabilities: [gpu]
