--- a/examples/confs/biomassters/biomassters_s2.yml
+++ b/examples/confs/biomassters/biomassters_s2.yml
@@ -25,32 +25,58 @@ trainer:
   check_val_every_n_epoch: 1
   log_every_n_steps: 50
   enable_checkpointing: true
-  default_root_dir: /output/biomassters_s2
+  default_root_dir: /output
 
 data:
   class_path: terratorch.datamodules.BioMasstersNonGeoDataModule
   init_args:
     data_root: '/data'
-    batch_size: 4
+    batch_size: 2
     num_workers: 0
-  # default bands
+    bands:
+      - BLUE
+      - GREEN
+      - RED
+      - NIR_BROAD
+      - SWIR_1
+      - SWIR_2
     train_transform:
+      - class_path: FlattenTemporalIntoChannels
       - class_path: albumentations.RandomCrop
         init_args:
           height: 224
           width: 224
       - class_path: albumentations.D4
       - class_path: ToTensorV2
+      - class_path: UnflattenTemporalFromChannels
+        init_args:
+          n_timesteps: 4
     val_transform:
+      - class_path: FlattenTemporalIntoChannels
+      - class_path: albumentations.CenterCrop
+        init_args:
+          height: 224
+          width: 224
       - class_path: ToTensorV2
+      - class_path: UnflattenTemporalFromChannels
+        init_args:
+          n_timesteps: 4
     predict_transform: 
+      - class_path: FlattenTemporalIntoChannels
+      - class_path: albumentations.CenterCrop
+        init_args:
+          height: 224
+          width: 224
       - class_path: ToTensorV2
+      - class_path: UnflattenTemporalFromChannels
+        init_args:
+          n_timesteps: 4
     drop_last: true
-    #metadata_filename: "biomassters_chip_tracker.csv"
+    metadata_filename: "biomassters_chip_tracker.csv"
     sensors:
       - "S2"
     as_time_series: true
-    subset: 0.05
+    subset: 0.01
     use_four_frames: true
 
 model:
@@ -68,7 +94,10 @@ model:
         num_convs: 4
       head_kwargs:
         dropout: 0.1
+        channel_list:
+          - 256
     loss: rmse
+    plot_on_val: True
 
 optimizer:
   class_path: torch.optim.AdamW
